# ParrotSub

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README-zh.md  README.md  environment.yml  pyproject.toml  requirements.txt  start.sh
src/parrotsub/: __init__.py  __main__.py  app.py  cli.py  downloader.py  i18n.py  icons.py  languages.py  models.py  theme.py  ui_config.py
src/parrotsub/pages/: __init__.py  exports.py  home.py  settings.py
src/parrotsub/widgets/: __init__.py  card.py  floating.py  header.py  icon_button.py  sidebar.py  status_pill.py  subtitle_view.py  switch.py
src/realtime_subtitle/: app_config.py  subtitle.py
