[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "parrotsub"
version = "0.4.1"
authors = [
  { name = "21White" },
]
description = "ParrotSub – modern, shadcn-inspired desktop UI + offline realtime speech-to-subtitle for Apple Silicon Mac."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*", "NOTICE", "THIRD_PARTY_LICENSES/*"]

# All runtime dependencies of both the UI shell (parrotsub) and the
# vendored speech-recognition backend (realtime_subtitle).
dependencies = [
  # UI
  "PyQt6>=6.9.0",
  # Realtime backend
  "numpy>=2.0.2",
  "argostranslate>=1.9.6",
  "torch>=2.7.0",
  "mlx-whisper==0.4.2",
  "scikit-learn>=1.6.1",
  "translate>=3.6.1",
  # speechbrain 1.0.3 from upstream is broken with torchaudio>=2.9; pin
  # to a working version directly.
  "speechbrain>=1.1.0",
  "PyAudio>=0.2.14",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: MacOS",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.urls]
Homepage = "https://github.com/21White/ParrotSub"
Issues = "https://github.com/21White/ParrotSub/issues"

[project.scripts]
parrotsub = "parrotsub.cli:main"
# Keep the legacy entry point too so existing users / scripts keep working.
realtime-subtitle = "realtime_subtitle.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/parrotsub", "src/realtime_subtitle"]
